# webscraper

./: Cargo.toml  LICENSE  README.md  wrangler.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml
src/: lib.rs
